<resources>
    <string name="bangalore_heading">Bangalore - ಬೆಂಗಳೂರು</string>
    <string name="app_name">Explore Bangalore</string>
    <string name="click_on_below">Click on below links to know more about the city</string>
    <string name="attractions">Attractions</string>
    <string name="shopping_malls">Hangout</string>
    <string name="transport">Transport</string>
    <string name="hotels">Hotels and Restaurants</string>
    <string name="it_hubs">IT Hubs</string>
    <string name="vidhana_soudha_name">Vidhana Soudha</string>
    <string name="vidhana_soudha_desc">The Vidhana Soudha located in Bengaluru, is the seat of the state legislature of Karnataka.</string>
    <string name="lalbagh_name">Lalbagh</string>
    <string name="lalbagh_desc">Lalbagh or Lalbagh Botanical Gardens, meaning The Red Garden in English, is a well-known botanical garden in southern Bengaluru, India</string>
    <string name="cubbon_park_name">Cubbon Park</string>
    <string name="cubbon_park_desc">Cubbon Park is a landmark area of the Bengaluru city, located within the heart of the city</string>
    <string name="innovative_name">Innovative Film City</string>
    <string name="innovative_desc">Innovative Film City is an amusement and theme park with go karting, and stage and studio facilities</string>
    <string name="bangalore_palace_name">Bangalore Palace</string>
    <string name="bangalore_palace_desc">Bangalore Palace, a palace built by Mysore wodeyar dynasty</string>
    <string name="wonderla_name">Wonder La</string>
    <string name="wonderla_desc">Wonderla Holidays, is one of the largest amusement park operator in India,headquartered near Bidadi</string>
    <string name="freedom_name">Freedom Park</string>
    <string name="freedom_desc">Freedom Park is located in the Central Business District. It was formerly the Central Jail.</string>
    <string name="nandi_name">Nandi Hills</string>
    <string name="nandi_desc">Nandi betta is an ancient hill fortress in southern India</string>
    <string name="highcourt_name">High Court</string>
    <string name="highcourt_desc">Karnataka High Court is the High Court of the Indian state of Karnataka. It is located in Bangalore</string>
    <string name="iskcon_name">Iskcon</string>
    <string name="iskcon_desc">Sri Radha Krishna Temple has deities of Radha and Krishna located at Rajajinagar, in North Bangalore</string>
    <string name="ub_city_name">UB City</string>
    <string name="ub_city_desc">UB City is the biggest luxury commercial property project in Bangalore, India. Pioneered by the UB Group in Joint Venture with Prestige Group</string>
    <string name="orian_name">Orian Mall</string>
    <string name="orian_desc">Orion Mall is a shopping mall at Brigade Gateway Enclave in Bangalore, Karnataka, India developed by Brigade Group</string>
    <string name="mantri_name">Mantri Square</string>
    <string name="mantri_desc">Mantri Square is a shopping mall situated in the Malleswaram locality in Bangalore, Karnataka, India</string>
    <string name="forum_name">Forum Mall</string>
    <string name="forum_desc">The Forum is a shopping mall located on Hosur Road in Koramangala, Bangalore, Karnataka, India developed by Prestige Group</string>
    <string name="phoenix_name">Phoenix Market City</string>
    <string name="phoenix_desc">It is the largest mall in Bangalore by area, occupying 1,600,000 square feet</string>
    <string name="ascendas_name">Ascendas Mall</string>
    <string name="ascendas_desc">Park Square Mall is located within the iconic International Tech Park Bangalore (ITPB), a leading IT park in India</string>
    <string name="garuda_name">Garuda Mall</string>
    <string name="garuda_desc">Garuda Mall is a premier shopping mall in the city of Bangalore, India.</string>
    <string name="inorbit_name">Inorbit Mall</string>
    <string name="inorbit_desc">Inorbit Mall is a subsidiary of the K. Raheja Corporation which runs shopping malls in various parts of India</string>
    <string name="meenakshi_name">Royal Meenakshi Mall</string>
    <string name="meenakshi_desc">Royal Meenakshi Mall is South Bangalore first complete mall with a hypermarket, retail, entertainment and multiplex</string>
    <string name="vega_city_name">Vega City</string>
    <string name="vega_city_desc">Vega City is one of the most awaited destinations in the south of Bengaluru.</string>

    <string name="itpl_name">ITPL</string>
    <string name="itpl_desc">International Tech Park (commonly called ITPL and ITPB) is a tech park located in Whitefield, Bangalore, 18 km from the city centre</string>
    <string name="manyata_name">Manyata Tech Park</string>
    <string name="manyata_desc">The park is situated in Hebbal on Outer Ring Road, and has a building area of 8.8 million sq. ft. The park is spread over 424 acres</string>
    <string name="bagmane_name">Bagmane Tech Park</string>
    <string name="bagmane_desc">Bagmane Tech Park is a software technological park in India. The park is situated at CV Raman Nagar in Bangalore.</string>
    <string name="psn_name">Prestige Shantiniketan</string>
    <string name="psn_desc">Prestige Shantiniketan is an integrated township in Whitefield, Bangalore on a total of 105 acres developed by Prestige group</string>
    <string name="ecity_name">Electronic City</string>
    <string name="ecity_desc">It is one of India’s largest electronic industrial parks, spread over 332 acres</string>
    <string name="ecospace_name">RMZ Ecospace</string>
    <string name="ecospace_desc">RMZ Ecospace Business Park was one of the first few large projects to come up on Sarjapur Outer Ring Road.</string>
    <string name="infinity_name">RMZ Infinity</string>
    <string name="infinity_desc">RMZ Infinity is located on Old Madras Road. It includes Google Office</string>
    <string name="global_name">Global Tech Village</string>
    <string name="global_desc">Global Village Tech Park is situated in Rajarajeshwari Nagar and spread over 120 acres.</string>
    <string name="egl_name">Embassy Golf Links</string>
    <string name="egl_desc">Embassy GolfLinks Business Park(or EGL) is a software centric commercial park in Bangalore, Karnataka, India.</string>
    <string name="cessna_name">Cessna Business Park</string>
    <string name="cessna_desc">Cessna Business Park is situated in Outer Ring Road, Bangalore</string>
    <string name="kial_name">KIAL</string>
    <string name="kial_desc">Kempegowda International Airport is an international airport serving Bangalore, the capital of the Indian state of Karnataka</string>
    <string name="bmtc_name">BMTC</string>
    <string name="bmtc_desc">Bangalore Metropolitan Transport Corporation (BMTC) is a government agency that operates the public transport bus service in Bangalore</string>
    <string name="bmrcl_name">BMRCL - Namma Metro</string>
    <string name="bmrcl_desc">Namma Metro , also known as Bengaluru Metro is a metro system serving the city of Bengaluru</string>
    <string name="ksrtc_name">KSRTC</string>
    <string name="ksrtc_desc">The Karnataka State Road Transport Corporation is a state-owned road transportation company in the state of Karnataka</string>
    <string name="rail_name">Indian Railways</string>
    <string name="rail_desc">Indian Railways (IR) is Indian national railway system operated by the Ministry of Railways</string>
    <string name="ola_name">OLA</string>
    <string name="ola_desc">Ola, is an Indian origin online transportation network company.Now based in Bangalore</string>
    <string name="uber_name">Uber</string>
    <string name="uber_desc">Uber also serves cab services for Bangalore City</string>
    <string name="kstdc_name">KSTDC</string>
    <string name="kstdc_desc">KSTDC is an organisation that was established by the Government of Karnataka state in India to promote Tourism in Karnataka.</string>

</resources>
